devel
-----

* Fixed undefined behavior on node delete.

* Fixed agency invalid operation

* Bugfix: An AQL ternary expression with the condition being true at query
  compile time would not execute its false branch.

* Fixed uptime in _admin/statistics.

* Fixed a bug in smart graph bfs traversals that might violate path uniqueness
  requirements in rare cases.

* Fix execution ability in CentOS 6 regarding newer boost.

* Fixed permissions for dump/restore.

* The _users collection is now properly restored when using arangorestore.

* Updated arangosync to 0.7.1.

* rename `minReplicationFactor` into `writeConcern` to make it consistent with
  `--cluster.write-concern` and avoid confusion with
  `--cluster.min-replication-factor`

* ArangoDB web UI was switched to React from previous framework and rebuilt.

* Enable the `parallelize-gather` AQL optimizer rule for certain write queries.

  The optimization is turned on by default and can be disabled by setting the
  startup option `--query.parallelize-gather-writes` to `false`.

* Shard synchronisation readlock aware of rebootId.

* Bugfix: In an AQL cluster query, when gathering unsorted data in combination
  with a LIMIT with non-zero offset, if this offset exactly matches the number
  of documents in the first shards consumed, the rest of the documents was not
  returned.

* Fixed GET _api/gharial to also include the name property in every returned graph.
  This is a consistency fix within the API as all other APIs include the name.
  As a work around the returned _key can be used, which is identical to the name.

* REMOTE and GATHER no longer make subqueries unsuitable for the
  `splice-subqueries` optimization.

* New internal counter and histogram support.

* Add a Prometheus endpoint for metrics, expose new metrics, old statistics
  and RocksDB metrics.

* Fixed known issue #509: ArangoSearch index consolidation does not work during creation of a link